# chess-llm

./: .gitignore  AGENTS.md  README.md  chess_llm.py  elo.py  openings.py  pyproject.toml  ratings.json  requirements.txt  tournament.py
tui/: __init__.py  board.py  common.py  state.py  tournament.py
